--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <!-- PS DEMO -->
     <section>
       <div>
-        <img src="img/pluralsight-white.png" />
+        <img src="img/pluralsight-white.png" alt="img/pluralsight" />
         <div>This site is created for demonstrative purposes only and does not offer any real products or services.</div>
       </div>
     </section>
